# bourne.rs

./: .env.example  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
agent-core/: Cargo.toml
agent-core/examples/: context_demo.rs  live_simple.rs  live_unix_tools.rs  mock_demo.rs  simple_agent.rs
agent-core/src/: agent.rs  client.rs  context.rs  error.rs  lib.rs  mock.rs  tool.rs  types.rs
agent-core/src/providers/: anthropic.rs  mod.rs  openai.rs
agent-tools/: Cargo.toml
agent-tools/src/: bash.rs  cat.rs  file.rs  find.rs  head.rs  lib.rs  ripgrep.rs
docs/: architecture.md  concurrency.md  context-management.md  crates.md  data-flow.md  documentation-style.md  error-handling.md  providers.md  traits.md
