[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
dotenvy = "0.15"
